include_ver_2_beta_2/freetype.h

  
  typedef int  FT_Int;
  typedef unsigned int  FT_UInt;
  typedef unsigned long  FT_ULong;
  typedef signed long  FT_Fixed;
  typedef int  FT_Error;