lib/src/generated_bindings.dart


  /// @function:
  /// FT_Get_Track_Kerning
  ///
  /// @description:
  /// Return the track kerning for a given face object at a given size.
  ///
  /// @input:
  /// face ::
  /// A handle to a source face object.
  ///
  /// point_size ::
  /// The point size in 16.16 fractional points.
  ///
  /// degree ::
  /// The degree of tightness.  Increasingly negative values represent
  /// tighter track kerning, while increasingly positive values represent
  /// looser track kerning.  Value zero means no track kerning.
  ///
  /// @output:
  /// akerning ::
  /// The kerning in 16.16 fractional points, to be uniformly applied
  /// between all glyphs.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// Currently, only the Type~1 font driver supports track kerning, using
  /// data from AFM files (if attached with @FT_Attach_File or
  /// @FT_Attach_Stream).
  ///
  /// Only very few AFM files come with track kerning data; please refer to
  /// Adobe's AFM specification for more details.
  int FT_Get_Track_Kerning(
    FT_Face face,
    int point_size,
    int degree,
    ffi.Pointer<FT_Fixed> akerning,
  ) {
    return _FT_Get_Track_Kerning(
      face,
      point_size,
      degree,
      akerning,
    );
  }

  late final _FT_Get_Track_KerningPtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Face, FT_Fixed, FT_Int,
              ffi.Pointer<FT_Fixed>)>>('FT_Get_Track_Kerning');
  late final _FT_Get_Track_Kerning = _FT_Get_Track_KerningPtr.asFunction<
      int Function(FT_Face, int, int, ffi.Pointer<FT_Fixed>)>();

  /// @function:
  /// FT_Select_Charmap
  ///
  /// @description:
  /// Select a given charmap by its encoding tag (as listed in
  /// `freetype.h`).
  ///
  /// @inout:
  /// face ::
  /// A handle to the source face object.
  ///
  /// @input:
  /// encoding ::
  /// A handle to the selected encoding.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// This function returns an error if no charmap in the face corresponds
  /// to the encoding queried here.
  ///
  /// Because many fonts contain more than a single cmap for Unicode
  /// encoding, this function has some special code to select the one that
  /// covers Unicode best ('best' in the sense that a UCS-4 cmap is
  /// preferred to a UCS-2 cmap).  It is thus preferable to @FT_Set_Charmap
  /// in this case.
  int FT_Select_Charmap(
    FT_Face face,
    int encoding,
  ) {
    return _FT_Select_Charmap(
      face,
      encoding,
    );
  }

  late final _FT_Select_CharmapPtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face, ffi.Int32)>>(
          'FT_Select_Charmap');
  late final _FT_Select_Charmap =
      _FT_Select_CharmapPtr.asFunction<int Function(FT_Face, int)>();

  /// @function:
  /// FT_Set_Charmap
  ///
  /// @description:
  /// Select a given charmap for character code to glyph index mapping.
  ///
  /// @inout:
  /// face ::
  /// A handle to the source face object.
  ///
  /// @input:
  /// charmap ::
  /// A handle to the selected charmap.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// This function returns an error if the charmap is not part of the face
  /// (i.e., if it is not listed in the `face->charmaps` table).
  ///
  /// It also fails if an OpenType type~14 charmap is selected (which
  /// doesn't map character codes to glyph indices at all).
  int FT_Set_Charmap(
    FT_Face face,
    FT_CharMap charmap,
  ) {
    return _FT_Set_Charmap(
      face,
      charmap,
    );
  }

  late final _FT_Set_CharmapPtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face, FT_CharMap)>>(
          'FT_Set_Charmap');
  late final _FT_Set_Charmap =
      _FT_Set_CharmapPtr.asFunction<int Function(FT_Face, FT_CharMap)>();

  /// @function:
  /// FT_Get_Charmap_Index
  ///
  /// @description:
  /// Retrieve index of a given charmap.
  ///
  /// @input:
  /// charmap ::
  /// A handle to a charmap.
  ///
  /// @return:
  /// The index into the array of character maps within the face to which
  /// `charmap` belongs.  If an error occurs, -1 is returned.
  int FT_Get_Charmap_Index(
    FT_CharMap charmap,
  ) {
    return _FT_Get_Charmap_Index(
      charmap,
    );
  }

  late final _FT_Get_Charmap_IndexPtr =
      _lookup<ffi.NativeFunction<FT_Int Function(FT_CharMap)>>(
          'FT_Get_Charmap_Index');
  late final _FT_Get_Charmap_Index =
      _FT_Get_Charmap_IndexPtr.asFunction<int Function(FT_CharMap)>();

  /// @function:
  /// FT_Get_Char_Index
  ///
  /// @description:
  /// Return the glyph index of a given character code.  This function uses
  /// the currently selected charmap to do the mapping.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// charcode ::
  /// The character code.
  ///
  /// @return:
  /// The glyph index.  0~means 'undefined character code'.
  ///
  /// @note:
  /// If you use FreeType to manipulate the contents of font files directly,
  /// be aware that the glyph index returned by this function doesn't always
  /// correspond to the internal indices used within the file.  This is done
  /// to ensure that value~0 always corresponds to the 'missing glyph'.  If
  /// the first glyph is not named '.notdef', then for Type~1 and Type~42
  /// fonts, '.notdef' will be moved into the glyph ID~0 position, and
  /// whatever was there will be moved to the position '.notdef' had.  For
  /// Type~1 fonts, if there is no '.notdef' glyph at all, then one will be
  /// created at index~0 and whatever was there will be moved to the last
  /// index -- Type~42 fonts are considered invalid under this condition.
  int FT_Get_Char_Index(
    FT_Face face,
    int charcode,
  ) {
    return _FT_Get_Char_Index(
      face,
      charcode,
    );
  }

  late final _FT_Get_Char_IndexPtr =
      _lookup<ffi.NativeFunction<FT_UInt Function(FT_Face, FT_ULong)>>(
          'FT_Get_Char_Index');
  late final _FT_Get_Char_Index =
      _FT_Get_Char_IndexPtr.asFunction<int Function(FT_Face, int)>();

  /// @function:
  /// FT_Get_First_Char
  ///
  /// @description:
  /// Return the first character code in the current charmap of a given
  /// face, together with its corresponding glyph index.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// @output:
  /// agindex ::
  /// Glyph index of first character code.  0~if charmap is empty.
  ///
  /// @return:
  /// The charmap's first character code.
  ///
  /// @note:
  /// You should use this function together with @FT_Get_Next_Char to parse
  /// all character codes available in a given charmap.  The code should
  /// look like this:
  ///
  /// ```
  /// FT_ULong  charcode;
  /// FT_UInt   gindex;
  ///
  ///
  /// charcode = FT_Get_First_Char( face, &gindex );
  /// while ( gindex != 0 )
  /// {
  /// ... do something with (charcode,gindex) pair ...
  ///
  /// charcode = FT_Get_Next_Char( face, charcode, &gindex );
  /// }
  /// ```
  ///
  /// Be aware that character codes can have values up to 0xFFFFFFFF; this
  /// might happen for non-Unicode or malformed cmaps.  However, even with
  /// regular Unicode encoding, so-called 'last resort fonts' (using SFNT
  /// cmap format 13, see function @FT_Get_CMap_Format) normally have
  /// entries for all Unicode characters up to 0x1FFFFF, which can cause *a
  /// lot* of iterations.
  ///
  /// Note that `*agindex` is set to~0 if the charmap is empty.  The result
  /// itself can be~0 in two cases: if the charmap is empty or if the
  /// value~0 is the first valid character code.
  int FT_Get_First_Char(
    FT_Face face,
    ffi.Pointer<FT_UInt> agindex,
  ) {
    return _FT_Get_First_Char(
      face,
      agindex,
    );
  }

  late final _FT_Get_First_CharPtr = _lookup<
          ffi.NativeFunction<FT_ULong Function(FT_Face, ffi.Pointer<FT_UInt>)>>(
      'FT_Get_First_Char');
  late final _FT_Get_First_Char = _FT_Get_First_CharPtr.asFunction<
      int Function(FT_Face, ffi.Pointer<FT_UInt>)>();

  /// @function:
  /// FT_Get_Next_Char
  ///
  /// @description:
  /// Return the next character code in the current charmap of a given face
  /// following the value `char_code`, as well as the corresponding glyph
  /// index.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// char_code ::
  /// The starting character code.
  ///
  /// @output:
  /// agindex ::
  /// Glyph index of next character code.  0~if charmap is empty.
  ///
  /// @return:
  /// The charmap's next character code.
  ///
  /// @note:
  /// You should use this function with @FT_Get_First_Char to walk over all
  /// character codes available in a given charmap.  See the note for that
  /// function for a simple code example.
  ///
  /// Note that `*agindex` is set to~0 when there are no more codes in the
  /// charmap.
  int FT_Get_Next_Char(
    FT_Face face,
    int char_code,
    ffi.Pointer<FT_UInt> agindex,
  ) {
    return _FT_Get_Next_Char(
      face,
      char_code,
      agindex,
    );
  }

  late final _FT_Get_Next_CharPtr = _lookup<
      ffi.NativeFunction<
          FT_ULong Function(
              FT_Face, FT_ULong, ffi.Pointer<FT_UInt>)>>('FT_Get_Next_Char');
  late final _FT_Get_Next_Char = _FT_Get_Next_CharPtr.asFunction<
      int Function(FT_Face, int, ffi.Pointer<FT_UInt>)>();
